--- a/home.html
+++ b/home.html
@@ -3,13 +3,13 @@
 	<head>
 		<title>Example</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600|Source+Code+Pro" rel="stylesheet" />
-		<link href="http://www.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet" />
-		<!--<link rel="stylesheet" type="text/css" href="css/style-mobile.css">
+		<!--<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600|Source+Code+Pro" rel="stylesheet" />-->
+		<!--<link href="http://www.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet" />-->
+		<link rel="stylesheet" type="text/css" href="css/style-mobile.css">
 		<link rel="stylesheet" type="text/css" href="css/style-narrow.css">
 		<link rel="stylesheet" type="text/css" href="css/style-narrower.css">
 		<link rel="stylesheet" type="text/css" href="css/style-wide.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">-->
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<!--[if lte IE 8]><script src="js/html5shiv.js" type="text/javascript"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/config.js"></script>
