--- a/home.html
+++ b/home.html
@@ -3,19 +3,34 @@
 	<head>
 		<title>Example</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<!--<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600|Source+Code+Pro" rel="stylesheet" />-->
+		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600|Source+Code+Pro" rel="stylesheet" />
 		<!--<link href="http://www.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet" />-->
 		<link rel="stylesheet" type="text/css" href="css/style-mobile.css">
 		<link rel="stylesheet" type="text/css" href="css/style-narrow.css">
-		<link rel="stylesheet" type="text/css" href="css/style-narrower.css">
+		<!--<link rel="stylesheet" type="text/css" href="css/style-narrower.css">-->
 		<link rel="stylesheet" type="text/css" href="css/style-wide.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<!--[if lte IE 8]><script src="js/html5shiv.js" type="text/javascript"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
+		<!--<script src="js/jquery.min.js"></script>
 		<script src="js/config.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-panels.min.js"></script>
-		<script src="html5shiv.js"></script>
+		<script src="js/skel-panels.min.js"></script>-->
+		<script src="js/html5shiv.js"></script>			
+		<script src="js/skel.min.js">
+			{
+			prefix: 'style',
+			preloadStyleSheets: true,
+			resetCSS: true,
+			boxModel: 'border',
+			grid: { gutters: 30 },
+			breakpoints: {
+				wide: { range: '1200-', containers: 1140, grid: { gutters: 50 } },
+				narrow: { range: '481-1199', containers: 960 },
+				mobile: { range: '-480', containers: 'fluid', lockViewport: true, grid: { collapse: true } }
+			}
+		}
+		</script>
+
+
 	</head>
 	<body>
 		<div class="container">
