--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 		<div class="container">
 			<!-- Header -->
 				<div id="header">
-					<h1 id="title">Example</h1>
+					<h1 id="title">Jasmin Test with SkelJS</h1>
 					<nav id="nav">
 						<a href="#">Home</a>
 						<a href="#">About Me</a>
